--- a/client/src/components/Certificate.css
+++ b/client/src/components/Certificate.css
@@ -1,6 +1,6 @@
 .name{
     position: absolute;
-        top: 800.30px;
+        top: 950.30px;
     width: 100%;
     text-align: center;
     text-align: center;
@@ -11,4 +11,25 @@
     line-height: normal;
     color: #4285F4;
     z-index: 1;
+}
+
+button{
+    padding: 21px 96px;
+    border-radius: 15px;
+    background-color: #0F9D58;
+    text-align: center;
+    font-family: "Google Sans";
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    color: #FFF;
+    border: none;
+    cursor: pointer;
+}
+
+.download-btn{
+    display: flex;
+    justify-content: center;
+    margin: 70px 0px;
 }
