--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -18,3 +18,9 @@ footer{
         left: 0px;
         right: 0px;
 }
+
+@media (max-width: 800px){
+    footer p{
+        font-size: 15px;
+    }
+}
