--- a/client/src/components/Certificate.css
+++ b/client/src/components/Certificate.css
@@ -1,6 +1,6 @@
 .name{
-    position:relative;
-        top: -1350px;
+    position: absolute;
+        top: 950.30px;
     width: 100%;
     text-align: center;
     text-align: center;
@@ -14,7 +14,7 @@
 }
 
 button{
-    padding: 21px 20px;
+    padding: 21px 96px;
     border-radius: 15px;
     background-color: #0F9D58;
     text-align: center;
@@ -32,121 +32,4 @@ button{
     display: flex;
     justify-content: center;
     margin: 70px 0px;
-}
-
-@media (max-width: 1380px){
-    .name{
-        top: -1300px
-    }
-}
-
-@media (max-width: 1330px){
-    .name{
-        top: -1280px
-    }
-}
-
-@media (max-width: 1300px){
-    .name{
-        top: -1250px
-    }
-}
-
-@media (max-width: 1250px){
-    .name{
-        top: -1200px
-    }
-}
-
-@media (max-width: 1200px){
-    .name{
-        top: -1150px
-    }
-}
-
-@media (max-width: 1150px){
-    .name{
-        top: -1100px
-    }
-}
-
-@media (max-width: 1100px){
-    .name{
-        top: -1000px;
-        font-size: 150px;        
-    }
-}
-
-@media (max-width: 1010px){
-    .name{
-        top: -900px;
-        font-size: 150px;        
-    }
-}
-
-@media (max-width: 900px){
-    .name{
-        top: -800px;
-        font-size: 120px;        
-    }
-}
-
-@media (max-width: 810px){
-    .name{
-        top: -720px;
-        font-size: 120px;        
-    }
-}
-
-@media (max-width: 720px){
-    .name{
-        top: -650px;
-        font-size: 110px;        
-    }
-}
-
-@media (max-width: 650px){
-    .name{
-        top: -550px;
-        font-size: 80px;        
-    }
-    button{
-        font-size: 15px;
-    }
-}
-
-@media (max-width: 580px){
-    .name{
-        top: -500px;
-        font-size: 80px;        
-    }
-}
-
-@media (max-width: 510px){
-    .name{
-        top: -450px;
-        font-size: 60px;        
-    }
-}
-
-@media (max-width: 470px){
-    .name{
-        top: -400px;
-        font-size: 60px;        
-    }
-}
-
-@media (max-width: 410px){
-    .name{
-        top: -360px;
-        font-size: 60px;        
-    }
-}
-
-
-@media (max-width: 360px){
-    .name{
-        top: -310px;
-        font-size: 50px;        
-    }
 }
