Issue Solved implemented buffering animations

--- a/client/src/components/Hero.css
+++ b/client/src/components/Hero.css
@@ -63,6 +63,21 @@ button{
     cursor: pointer;
 }
 
+.loader {
+    border: 5px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 5px solid #EA4335; /* Animated color */
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
+
 @media (max-width: 1200px){
     main{
         margin-top: 200px;
