--- a/client/src/components/Certificate.css
+++ b/client/src/components/Certificate.css
@@ -33,3 +33,18 @@ button{
     justify-content: center;
     margin: 70px 0px;
 }
+
+.loader {
+    border: 5px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 5px solid #EA4335; /* Animated color */
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+  
